# Pathing

./: Bezier.cpp  Bezier.h  CMakeLists.txt  Linear.cpp  Linear.h  POINTS.h  Path.h  QuinticSpline.cpp  QuinticSpline.h  README.md  main.cpp
IO/: IO.cpp  IO.h
PathTypes/Bezier/: Bezier.cpp  Bezier.h
PathTypes/Combined/: Combined.cpp  Combined.h
PathTypes/Linear/: Linear.cpp  Linear.h
PathTypes/QSplines/: QuinticSpline.cpp  QuinticSpline.h
QSplines/: QuinticSpline.cpp  QuinticSpline.h
core/: Path.h  Pose.cpp  Pose.h  extras.h
sciplot/: Plot.hpp  Utils.hpp
sciplot/specs/: TicsSpecsMajor.hpp
